# fastapi-cache

./: .gitignore  README.md
fastapi-cache/: .env  Dockerfile  main.py  pyproject.toml
fastapi-cache/fastapi_cache/: main.py
fastapi-cache/fastapi_cache/api/: router.py
fastapi-cache/fastapi_cache/api/dependencies/: repositories.py
fastapi-cache/fastapi_cache/api/routes/: movies.py
fastapi-cache/fastapi_cache/core/: config.py
fastapi-cache/fastapi_cache/db/: errors.py  session.py
fastapi-cache/fastapi_cache/db/repositories/: movies.py
fastapi-cache/fastapi_cache/db/tables/: models.py  profiles.py
fastapi-cache/fastapi_cache/schemas/: movies.py
