[tool.poetry]
name = "fastapi-cache"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
redis = "^5.0.1"
sqlalchemy = "1.4.36"
sqlalchemy-utils = "^0.41.1"
sqlmodel = "^0.0.11"
pydantic = "~1.9.0"
aiosqlite = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
